--- a/src/main/resources/templates/updateMember.html
+++ b/src/main/resources/templates/updateMember.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form th:action="@{/member/insert}"
+<form th:action="@{/member/update}"
       method="post" th:object="${member}">
     <div>
         <lable for = "id">Id :</lable>
