--- a/src/main/resources/templates/insertMeMber.html
+++ b/src/main/resources/templates/insertMeMber.html
@@ -2,21 +2,34 @@
 <html xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <script src="/js/jquery.js"></script>
+    <script src="/js/check.js"></script>
+
     <title>Title</title>
 </head>
+<style>
+    span{
+    font-size : 10px;
+    color:red;
+    }
+</style>
 <body>
-<form th:action="@{/member/insert}" method="post">
+<form th:action="@{/member/insert}" method="post"
+      th:object="${memberDto}">
     <div>
         <lable for = "name">이름 :</lable>
-        <input type="text" name="name">
+        <input type="text" name="name" id="name" th:field="*{name}">
+        <span th:errors="*{name}"></span>
     </div>
     <div>
         <lable for = "age">나이 :</lable>
-        <input type="text" name="age">
+        <input type="text" name="age" id="age" th:field="*{age}">
+        <span th:errors="*{age}"></span>
     </div>
     <div>
         <lable for = "address">주소 :</lable>
-        <input type="text" name="address">
+        <input type="text" name="address" id="address" th:field="*{address}">
+        <span th:errors="*{address}"></span>
     </div>
     <input type="submit" value="등록">
 </form>
