--- a/src/main/resources/templates/updateMember.html
+++ b/src/main/resources/templates/updateMember.html
@@ -2,6 +2,10 @@
 <html xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <script src="/js/jquery.js"></script>
+
+    <script src="/js/check.js"></script>
+
     <title>Title</title>
 </head>
 <body>
@@ -10,15 +14,15 @@
     <div>
         <lable for = "id">Id :</lable>
         <input type="text" th:field="*{id}"disabled>
-        <input type="hidden"  th:field="*{id}">
+        <input type="hidden"  th:field="*{id}" >
     </div>
     <div>
         <lable for = "name">이름 :</lable>
-        <input type="text" th:field="*{name}">
+        <input type="text" th:field="*{name}" id="name">
     </div>
     <div>
         <lable for = "age">나이 :</lable>
-        <input type="text" th:field="*{age}">
+        <input type="text" th:field="*{age}" id="age">
     </div>
     <div>
         <lable for = "address">주소 :</lable>
